# db_atencao_basica_secoge

./: .env  .gitignore  README.md  google_client_secret.json  h origin main  pyproject.toml
dado_bruto/: % de equipes com ISF maior ou =7.xlsx  ANALISE_PEAB_USF_29.02_DemandaBI.xlsx  Agendamento_coletas.csv  BASE PLANEJAMENTO SEINFRA REV102 - 27.05.2024.xlsx  COLETA POSTOS.xlsx  COLUNAS RENOMEADAS  Cadastro e Visita Domiciliar_Jan a Maio 2024_SECOGE_20.06.2024.xlsx  Conversão da Classificação final da ASU.xlsx  Feriados.xlsx  Indicadores PREVINE 1° QD 2024_Base Local_Nilsinho_12.06.2024_para SEPLAGTD.xlsx  Login_senha.xlsx  Login_senha_unidades.xlsx  Metas cargo.xlsx  PLANILHA DE ESTOQUE ATUALIZADA - MED E MMH.xlsx  PROJETOS_SECOGE_GGSD_ TARGET.xlsx  Pasta.xlsx  Pasta1.xlsx  Pct de equipes x 70pct de pessoas cadastradas visitadas.xlsx  Ref. Previne 2.xlsx  Ref. Previne.xlsx  TABELA LABORATÓRIO.xlsx  Tooltip_Coletas.xlsx  USF.xlsx  _COMISSIONAMENTO Acompanhamento dos Projetos Estratégicos SESAU ATT _.xlsx  dados_estabelecimento_equipes_cnes_mar.csv  dados_estabelecimento_equipes_cnes_mar.xlsx  dados_profissionais_cnes_mar.csv  dados_profissionais_lotacoes_equipes_cnes_mar.csv  previne.csv  previne.xlsx  previne_mensal.xlsx  scnes_equipes.xlsx  situacao_nao_configurada.xlsx  tooltip agendamentos.xlsx
modelagem/: .$db_atbasica.drawio.bkp  .$schema_agendamento.drawio.bkp  .$schema_unidades.drawio.bkp  MODELAGEM.md  db_atbasica.drawio  schema_agendamento.drawio  schema_avaliacao_satisfacao_usuario.drawio  schema_calendario.drawio  schema_funcionarios_equipes.drawio  (+2 more)
(+61 files in other folders)
