[tool.poetry]
name = "db-atbasica"
version = "0.1.0"
description = ""
authors = ["plz09 <r.pellizzi09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.31"
psycopg2 = "^2.9.9"
unidecode = "^1.3.8"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
